[gd_scene load_steps=11 format=3 uid="uid://brt41pgvdnjdg"]

[ext_resource type="Script" path="res://world/buildings/buildings.gd" id="1_4l4ae"]
[ext_resource type="PackedScene" uid="uid://cvejhrese41n5" path="res://resources/particles/parts_rubble.tscn" id="1_4rioh"]
[ext_resource type="Script" path="res://world/buildings/building_area.gd" id="1_lg58d"]
[ext_resource type="Texture2D" uid="uid://mk77t7h0shl1" path="res://world/sprites/shelf_away.png" id="4_5c1eq"]
[ext_resource type="Texture2D" uid="uid://be7t2okvs7rc4" path="res://world/sprites/shelf_full.png" id="4_ni6c7"]
[ext_resource type="Texture2D" uid="uid://dtsbxe038pktt" path="res://world/sprites/shelf_corner.png" id="6_g0aqr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20arr"]
size = Vector2(36, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_twa55"]
size = Vector2(36, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wackd"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_duo43"]
size = Vector2(32, 64)

[node name="building_bl" type="StaticBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 8
collision_mask = 19
script = ExtResource("1_4l4ae")

[node name="building_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 17
script = ExtResource("1_lg58d")

[node name="parts_rubble" parent="building_area" instance=ExtResource("1_4rioh")]
position = Vector2(10, 4)
emitting = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="building_area"]
position = Vector2(32, 16)
shape = SubResource("RectangleShape2D_20arr")
debug_color = Color(0.933333, 0.25098, 0.203922, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="building_area"]
shape = SubResource("RectangleShape2D_twa55")
debug_color = Color(0.933333, 0.25098, 0.203922, 0.419608)

[node name="book_marker" type="Marker2D" parent="building_area"]
position = Vector2(34, -18)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 16.0
offset_right = 48.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0.654902, 0.243137, 0.172549, 1)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(32, 16)
shape = SubResource("RectangleShape2D_wackd")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -16.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0.654902, 0.243137, 0.172549, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_duo43")

[node name="building_sprite1" type="Sprite2D" parent="."]
position = Vector2(32, 16)
texture = ExtResource("4_5c1eq")

[node name="building_sprite2" type="Sprite2D" parent="." groups=["half_change"]]
position = Vector2(0, -16)
rotation = -1.5708
texture = ExtResource("4_ni6c7")

[node name="corner_sprite" type="Sprite2D" parent="."]
position = Vector2(0, 16)
rotation = 1.5708
texture = ExtResource("6_g0aqr")
flip_v = true

[connection signal="body_entered" from="building_area" to="building_area" method="_on_body_entered"]
